--- a/client/src/App.css
+++ b/client/src/App.css
@@ -236,11 +236,11 @@
 }
 
 .game-btn {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   border: none;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: bold;
   color: rgba(255, 255, 255, 0.9);
   display: flex;
@@ -275,8 +275,8 @@
 /* --- GAMEPAD D-PAD --- */
 .dpad-container {
   position: relative;
-  width: 180px;
-  height: 180px;
+  width: 240px;
+  height: 240px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -284,12 +284,12 @@
 
 .dpad-btn {
   position: absolute;
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   background: #444;
   border: none;
   color: #aaa;
-  font-size: 1.5rem;
+  font-size: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -310,35 +310,35 @@
 
 .dpad-up {
   top: 0;
-  left: 60px;
+  left: 80px;
   border-radius: 10px 10px 0 0;
 }
 
 .dpad-down {
   bottom: 0;
-  left: 60px;
+  left: 80px;
   border-radius: 0 0 10px 10px;
 }
 
 .dpad-left {
   left: 0;
-  top: 60px;
+  top: 80px;
   border-radius: 10px 0 0 10px;
 }
 
 .dpad-right {
   right: 0;
-  top: 60px;
+  top: 80px;
   border-radius: 0 10px 10px 0;
 }
 
 .dpad-center {
   position: absolute;
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   background: #444;
-  top: 60px;
-  left: 60px;
+  top: 80px;
+  left: 80px;
   z-index: -1;
 }
 
@@ -392,6 +392,10 @@
   padding: 20px;
   box-sizing: border-box;
   overflow: hidden; /* Prevent scrolling */
+  user-select: none; /* Disable text selection globally */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .control-section {
